--- a/homepage/index.html
+++ b/homepage/index.html
@@ -4,8 +4,8 @@
         <title>myCheckout</title>
         <link rel="icon" href="../images/NAULogo.jpeg"/>
         <link rel="stylesheet" href="index.css"/>
-        <script src="index.js"></script>
         <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div class="login-box">
@@ -14,7 +14,7 @@
                 <h1 id="title">
                     <span class="text" id="prefix">my</span><span class="text" id="main-word">Checkout</span>
                 </h1>
-                <a class="text" id="sign-in">SIGN IN</a>
+                <a class="text" id="sign-in" href="../loginpage/login.html">SIGN IN</a>
             </div>
         </div>
     </body>
