--- a/mainpage/mainpage.html
+++ b/mainpage/mainpage.html
@@ -1,1 +1,16 @@
-<body>mainpage</body>
+<!DOCTYPE html>
+<html>
+    <head>
+        <!-- Make it say, "Welcome, USER - myCheckout -->
+        <title>myCheckout</title>
+        <link rel="icon" href="../images/NAULogo.jpeg"/>
+        <link rel="stylesheet" href="mainpage.css"/>
+        <script src="mainpage.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body>
+        <div id="main-area">
+            <p>...text here in latin for some reason...</p>
+        </div>
+    </body>
+</html>
