--- a/mainpage/mainpage.html
+++ b/mainpage/mainpage.html
@@ -6,11 +6,15 @@
         <link rel="icon" href="../images/NAULogo.jpeg"/>
         <link rel="stylesheet" href="mainpage.css"/>
         <script src="mainpage.js"></script>
+        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div id="main-area">
+            <div id="dialog"><p>THIS IS A POPUP...latin text</p></div>
             <p>...text here in latin for some reason...</p>
+            <button id="my_button">SHOW</button>
         </div>
     </body>
 </html>
