Laid the groundwork for mainpage

--- a/mainpage/mainpage.html
+++ b/mainpage/mainpage.html
@@ -6,15 +6,48 @@
         <link rel="icon" href="../images/NAULogo.jpeg"/>
         <link rel="stylesheet" href="mainpage.css"/>
         <script src="mainpage.js"></script>
-        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div id="main-area">
-            <div id="dialog"><p>THIS IS A POPUP...latin text</p></div>
-            <p>...text here in latin for some reason...</p>
-            <button id="my_button">SHOW</button>
+            <div></div>
+            <div id="buttons">
+                <div class="inline" id="left-buttons"><span>REMOVE</span></div>
+                <div class="inline" id="right-buttons"><span>ADD TABLE</span></div><br/>
+            </div>
+            <dir id="table-area">
+                <table>
+                    <tr>
+                        <th>Item ID</th>
+                        <th>Student ID</th>
+                        <th>Due Date</th>
+                    <tr>
+                    <tr>
+                        <td>1</td>
+                        <td>1239</td>
+                        <td>Oct 27th</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>123909</td>
+                        <td>Oct 18</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>123909</td>
+                        <td>Oct 18</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>123909</td>
+                        <td>Oct 18</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>123909</td>
+                        <td>Oct 18</td>
+                    </tr>
+                </table>
+            </dir>
         </div>
     </body>
 </html>
