--- a/mainpage/mainpage.html
+++ b/mainpage/mainpage.html
@@ -6,6 +6,7 @@
         <link rel="icon" href="../images/NAULogo.jpeg"/>
         <link rel="stylesheet" href="mainpage.css"/>
         <script src="mainpage.js"></script>
+        <meta charset="utf-8">
     </head>
     <body>
         <div id="main-area">
